--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
   </head>
 
   <body>
-    <div id="topBar"><button id="LogIn" onclick="login()">Login</button></div>
+    <div id="topBar"><button id="Login" onclick="login()">Login</button></div>
   </body>
 </html>
