--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     />
     <title>Halo</title>
     <link rel="stylesheet" href="CSS.css" />
-    <script src="JavaScript.js"></script>
+    <script src="Startpage.js"></script>
   </head>
 
   <body>
