--- a/index.html
+++ b/index.html
@@ -1,18 +1,15 @@
 <!DOCTYPE html>
 <html lang="en-GB">
   <head>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&display=swap"
-      rel="stylesheet"
-    />
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Jersey+25&display=swap" rel="stylesheet">
     <title>Halo</title>
-    <link rel="stylesheet" href="CSS.css" />
+    <link rel="stylesheet" href="Startpage.css" />
     <script src="Startpage.js"></script>
   </head>
 
-  <body>
+  <body> <h1 class="BrandName">HALO</h1>
     <div id="topBar"><button id="Login" onclick="login()">Login</button></div>
   </body>
 </html>
