--- a/LoginPage.html
+++ b/LoginPage.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <head>
+  <head> <link rel="stylesheet" href="Loginpage.css">
     <title>Login To Halo</title>
   </head>
   <body><div><form></form></body>
