--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="Startpage.js"></script>
   </head>
 
-  <body> <h1 class="BrandName">HALO</h1>
-    <div id="topBar"><button id="Login" onclick="login()">Login</button></div>
+  <body>
+    <div id="topBar"> <h1 class="BrandName">HALO</h1> <button id="Login" onclick="login()">Login</button></div>
   </body>
 </html>
