Major Change Test

--- a/HTML3.html
+++ b/HTML3.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-GB">
   <head>
-    <title>Halo|Login</title>
+    <title>Login To Halo</title>
     <link rel="stylesheet" href="CSS.css" />
     <script src="JavaScript.js"></script>
   </head>
