--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
   </head>
 
   <body>
-    <div id="topBar"> <h1 class="BrandName">HALO</h1> <button id="Login" onclick="login()">Login</button></div>
+    <div id="topBar"> <p class="BrandName">HALO</p> <button id="Signup" onclick="signup()">Sign Up</button></div>
   </body>
 </html>
