more big changes

--- a/HTML3.html
+++ b/HTML3.html
@@ -1,28 +1,5 @@
 <!DOCTYPE html>
 <html lang="en-GB">
-  <head>
-    <title>Login To Halo</title>
-    <link rel="stylesheet" href="CSS.css" />
-    <script src="JavaScript.js"></script>
-  </head>
-
-  <body>
-    <h2>Welcome To <span>THE FUTURE</span></h2>
-    <emphasis>Please Log In</emphasis><br />
-    <form action="" class="form" id="form">
-      <div id="Login_Form">
-        <input
-          placeholder="Username"
-          autofocus
-          id="username"
-          type="text"
-        /><br />
-        <input id="password" placeholder="Password" type="password" />
-        <br />
-        <button onclick="">Submit</button><br><a href="HTML.html" style="padding-bottom: 20px;">Already Have An Account? Click Here</a>
-      </div>
-    </form>
-    <br />
-    <p></p>
-  </body>
+  <head></head>
+  <body></body>
 </html>
