--- a/Signup.html
+++ b/Signup.html
@@ -1,7 +1,20 @@
 <!DOCTYPE html>
 <html>
-  <head> <link rel="stylesheet" href="Signup.css">
+  <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Jersey+25&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="Signup.css" />
     <title>Signup To Halo</title>
   </head>
-  <body><div><form></form></div></body>
+  <body>
+    <div id="topBar">
+      <p class="BrandName">HALO</p>
+      <button id="Login" onclick="login()">Login</button>
+    </div>
+    <div><form></form></div>
+  </body>
 </html>
