--- a/Signup.html
+++ b/Signup.html
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Jersey+25&display=swap"
-      rel="stylesheet"
-    />
+   <style>
+@import url('https://fonts.googleapis.com/css2?family=Jersey+25&display=swap');
+</style>
     <link rel="stylesheet" href="Signup.css" />
     <title>Signup To Halo</title>
   </head>
