final fix for logo and other changes

--- a/Signup.html
+++ b/Signup.html
@@ -4,7 +4,7 @@
    <style>
 @import url('https://fonts.googleapis.com/css2?family=Jersey+25&display=swap');
 </style>
-    <link rel="stylesheet" href="Signup.css" />
+    <link rel="stylesheet" href="LogSign.css" />
     <title>Signup To Halo</title>
   </head>
   <body>
