--- a/Login.html
+++ b/Login.html
@@ -5,5 +5,7 @@
 </style>
     <link rel="stylesheet" href="LogSign.css" />
     <title>Login To Halo</title></head>
-  <body></body>
+  <body><div id="topBar">
+      <a  href="index.html" class="BrandName">HALO</a> 
+    </div> <div id="LoginForm"><form></form></div></body>
 </html>
