--- a/Signup.html
+++ b/Signup.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
-   <style>
-@import url('https://fonts.googleapis.com/css2?family=Jersey+25&display=swap');
-</style>
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Jersey+25&display=swap");
+    </style>
     <link rel="stylesheet" href="LogSign.css" />
     <title>Signup To Halo</title>
   </head>
   <body>
     <div id="topBar">
-      <p class="BrandName">HALO</p>
-      <button id="Login" onclick="login()">Login</button>
+      <a href="index.html" class="BrandName">HALO</a>
     </div>
-    <div><form></form></div>
+    <div id="SignupForm"><form></form></div>
   </body>
 </html>
