--- a/Signup.html
+++ b/Signup.html
@@ -11,6 +11,6 @@
     <div id="topBar">
       <a href="index.html" class="BrandName">HALO</a>
     </div>
-    <div id="SignupForm"><form></form></div>
+    <div id="SignupForm"><form><p>Invalid Email</p><input type="email" placeholder="Email"><p id="DoesntMatch">Email Does Not Match</p> <input type="email" placeholder="Confirm Email"> </form></div>
   </body>
 </html>
