branding change (i finally know what i want to do now)

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <style>
 @import url('https://fonts.googleapis.com/css2?family=Jersey+25&display=swap');
 </style>
-    <title>Halo</title>
+    <title>Galaxy Of Games</title>
     <link rel="stylesheet" href="Startpage.css" />
     <script src="Startpage.js"></script>
   </head>
 
   <body>
-    <div id="topBar"> <h1 class="BrandName">HALO</h1> <button id="Login" onclick="login()">Login</button><button id="Signup" onclick="signup()">Sign Up</button></div>
+    <header><img src="logo.png" alt="Galaxy Of Games Logo"></header>
   </body>
 </html>
