--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
   </head>
 
   <body>
-    <header><img src="logo.png" alt="Galaxy Of Games Logo"></header>
+    <header><img src="logo.png" alt="Galaxy Of Games Logo" id="Logo"></header>
   </body>
 </html>
