--- a/index.html
+++ b/index.html
@@ -6,10 +6,33 @@
 </style>
     <title>Galaxy Of Games</title>
     <link rel="stylesheet" href="Startpage.css" />
-    <script src="Startpage.js"></script>
+    <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Responsive Top Bar</title>
+  <link rel="stylesheet" href="styles.css">
   </head>
-
+ <header>
+    <div class="logo">
+      <img src="logo-placeholder.png" alt="Logo" />
+    </div>
+    <nav class="navbar">
+      <ul class="menu">
+        <li><a href="#">Shows</a></li>
+        <li><a href="#">Games</a></li>
+        <li><a href="#">Books</a></li>
+      </ul>
+      <div class="dropdown">
+        <button class="dropdown-btn">☰</button>
+        <ul class="dropdown-menu">
+          <li><a href="#">Shows</a></li>
+          <li><a href="#">Games</a></li>
+          <li><a href="#">Books</a></li>
+        </ul>
+      </div>
+    </nav>
+  </header>
+   <script src="Startpage.js"></script> 
   <body>
-    <header><img src="logo.png" alt="Galaxy Of Games Logo" id="Logo"></header>
+  <header></header>
   </body>
 </html>
