dropdown button testing

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <li><a href="#">Books</a></li>
       </ul>
       <div class="dropdown">
-        <button class="dropdown-btn">☰</button>
+        <button class="dropdown-btn">v</button>
         <ul class="dropdown-menu">
           <li><a href="#">Shows</a></li>
           <li><a href="#">Games</a></li>
