--- a/index.html
+++ b/index.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html lang="en-GB">
   <head>
-<style>
-@import url('https://fonts.googleapis.com/css2?family=Jersey+25&display=swap');
-</style>
-    <title>Galaxy Of Games</title>
-    <link rel="stylesheet" href="Startpage.css" />
-    <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Responsive Top Bar</title>
-  <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="index.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Emblema+One&display=swap"
+      rel="stylesheet"
+    />
+    <title>*WEBSITE NAME HERE*</title>
   </head>
   <body>
- 
+    <div id="topbar">
+      <h1 id="Title">THE WEB</h1>
+    </div>
+    <h1 id="coolmiddle">Welcome to *WEBSITE NAME HERE*</h1>
   </body>
 </html>
+
