--- a/index.html
+++ b/index.html
@@ -12,9 +12,12 @@
   </head>
   <body>
     <div id="topbar">
-      <h1 id="Title">THE WEB</h1>
+      <h1 id="Title">*WEBSITE NAME HERE*</h1>
     </div>
-    <h1 id="coolmiddle">Welcome to *WEBSITE NAME HERE*</h1>
+    <h1 id="coolmiddle" class="glow">Welcome to *WEBSITE NAME HERE*</h1> 
+    <br>
+   <br>
+   <p class"glow">Tools To Help In Games You Love!</p>
+   <img src="">
   </body>
 </html>
-
