index changes and stuff

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       href="https://fonts.googleapis.com/css2?family=Emblema+One&display=swap"
       rel="stylesheet"
     />
+    <link rel="icon" link type="ico/x-icon" href="">
     <title>*WEBSITE NAME HERE*</title>
   </head>
   <body>
@@ -17,7 +18,7 @@
     <h1 id="coolmiddle" class="glow">Welcome to *WEBSITE NAME HERE*</h1> 
     <br>
    <br>
-   <p class"glow">Tools To Help In Games You Love!</p>
+   <p class"glow" id="tools">Tools To Help In Games You Love!</p>
    <img src="">
   </body>
 </html>
