finally decided on a name credits to "owl"

--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
       rel="stylesheet"
     />
     <link rel="icon" link type="ico/x-icon" href="">
-    <title>*WEBSITE NAME HERE*</title>
+    <title>Fanformation</title>
   </head>
   <body>
     <div id="topbar">
-      <h1 id="Title">*WEBSITE NAME HERE*</h1>
+      <h1 id="Title">Fanformation</h1>
     </div>
-    <h1 id="coolmiddle" class="glow">Welcome to *WEBSITE NAME HERE*</h1> 
+    <h1 id="coolmiddle" class="glow">Welcome to Fanformation!</h1> 
     <br>
    <br>
-   <p class"glow" id="tools">Tools To Help In Games You Love!</p>
+   <p class="glow" id="tools">Tools To Help In Games You Love!</p>
    <img src="">
   </body>
 </html>
