--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
       href="https://fonts.googleapis.com/css2?family=Emblema+One&display=swap"
       rel="stylesheet"
     />
-    <link rel="icon" link type="ico/x-icon" href="">
+    <link rel="icon" link type="ico/x-icon" href="" />
     <title>Fanformation</title>
   </head>
   <body>
     <div id="topbar">
       <h1 id="Title">Fanformation</h1>
     </div>
-    <h1 id="coolmiddle" class="glow">Welcome to Fanformation!</h1> 
-    <br>
-   <br>
-   <p class="glow" id="tools">Tools To Help In Games You Love!</p>
-   <img src="">
+    <h1 id="coolmiddle" class="glow">Welcome to Fanformation!</h1>
+    <br />
+    <br />
+    <p class="glow" id="tools">Tools To Help In Games You Love!</p>
+    <img src="" alt="Placeholder"/> 
   </body>
 </html>
