a lot more pages

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
   </head>
   <body>
     <div id="topbar">
-      <h1 id="Title">Fanformation</h1>
+      <h1 id="Title">Fanformation</h1> 
+      <a src="/><p></p></a>
     </div>
     <h1 id="coolmiddle" class="glow">Welcome to Fanformation!</h1>
     <br />
